Features and about us section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,8 @@
 @import "base/utilities";
 
 @import "component/button";
+@import "component/composition";
+@import "component/feature-box";
 
 @import "layout/grid";
 @import "layout/header";
