--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -5,3 +5,14 @@
     clear: both;
   }
 }
+
+@mixin gradient-text {
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
